Update title for individual pages and store current player with task type in as resolvedToken